<resources>
    <string name="app_name" translatable="false">Catch The Legend</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="help_title">Welcome!</string>
    <string name="help_text">Catch the legend is a game simelair to pokemon go! The objective of catch the legend is to walk around your enviorement and collect legends from different franchises. You can find these by looking at the map and finding yelloy explanaition marks.
    When you click on this mark you receive the legend! You can then later find this legend in your compendium. You can also start a special quest. When following the quest you must reach the given destination by the quest. When you reach your destination you receive a special quest legend!
    We hope you enjoy the game and have fun!</string>

    <string name="map">Map</string>
    <string name="quests">Quests</string>
    <string name="compendium">Compendium</string>
    <string name="settings">Settings</string>
    <string name="system_settings">System Settings</string>

    <string name="help" translatable="false">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="franchise">Franchise:</string>
    <string name="caught">Caught:</string>
    <string name="rarity">Rarity:</string>
    <string name="set_quest">Quest has been set</string>
    <string name="disable_quest">Quest has been disabled</string>

</resources>
