<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />

        <item
            android:id="@+id/quest"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/quests" />

        <item
            android:id="@+id/compendium"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/compendium" />

    </group>

    <item android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/system_settings" />
        </menu>

    </item>

</menu>